--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ source-code: https://viktorinawhite.github.io/wyc
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: Student Sailing: University of Washington Yacht Club 
+title: "Student Sailing: University of Washington Yacht Club" 
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: A Digital Exhibit
 # description appears in meta tags and other locations
