--- a/_config.yml
+++ b/_config.yml
@@ -20,12 +20,12 @@ source-code: https://viktorinawhite.github.io/wyc
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: "Student Sailing" 
+title: "Stills Under Sail" 
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: A University of Washington Yacht Club Digital Exhibit
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "Student Sailing: A University of Washington Yacht Club Digital Exhibit offers a glimpse into over 75 years of student-led sailing."
+description: "Stills Under Sail: A University of Washington Yacht Club Digital Exhibit offers a glimpse into over 75 years of student-led sailing."
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: Viktorina White
 
